{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 53,
  "lineage": "98d34fd1-d242-e2ad-1d8e-ad439ca6f697",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ceefbeaafdb2b64d",
            "arn": "arn:aws:ec2:eu-west-3:039497794217:elastic-ip/eipalloc-0ceefbeaafdb2b64d",
            "association_id": "eipassoc-0b3bf4bb37a9aefc1",
            "domain": "vpc",
            "id": "eipalloc-0ceefbeaafdb2b64d",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-01ff0372ff4661ad0",
            "private_dns": "ip-10-0-1-51.eu-west-3.compute.internal",
            "private_ip": "10.0.1.51",
            "public_dns": "ec2-51-45-41-213.eu-west-3.compute.amazonaws.com",
            "public_ip": "51.45.41.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tp03-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-nat-eip",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:internet-gateway/igw-06b03ec4eddda804b",
            "id": "igw-06b03ec4eddda804b",
            "owner_id": "039497794217",
            "tags": {
              "Name": "tp03-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-igw",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "vpc_id": "vpc-08cf0e105dd268667"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ceefbeaafdb2b64d",
            "association_id": "eipassoc-0b3bf4bb37a9aefc1",
            "connectivity_type": "public",
            "id": "nat-099cb8869d701a201",
            "network_interface_id": "eni-01ff0372ff4661ad0",
            "private_ip": "10.0.1.51",
            "public_ip": "51.45.41.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b97d03a9f84a9c19",
            "tags": {
              "Name": "tp03-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-nat",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:route-table/rtb-04500e9e8799062df",
            "id": "rtb-04500e9e8799062df",
            "owner_id": "039497794217",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-099cb8869d701a201",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tp03-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-private-rt",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf0e105dd268667"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:route-table/rtb-0ce1e4f8d7682c2ba",
            "id": "rtb-0ce1e4f8d7682c2ba",
            "owner_id": "039497794217",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b03ec4eddda804b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tp03-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-public-rt",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf0e105dd268667"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b804bb7869de1a4",
            "route_table_id": "rtb-04500e9e8799062df",
            "subnet_id": "subnet-022f9a28cbbb08825"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d26a1eba93055c19",
            "route_table_id": "rtb-04500e9e8799062df",
            "subnet_id": "subnet-084afe5736f25d506"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064abe6c96b943029",
            "route_table_id": "rtb-0ce1e4f8d7682c2ba",
            "subnet_id": "subnet-0b97d03a9f84a9c19"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067483ef9e4a3a51f",
            "route_table_id": "rtb-0ce1e4f8d7682c2ba",
            "subnet_id": "subnet-09e10c8d23b38dff3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group/sg-098ce48df83d26fd6",
            "description": "Allow SSH to bastion from authorized IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098ce48df83d26fd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.153.5.8/32"
                ],
                "description": "SSH depuis IP autorisee",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tp03-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "039497794217",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tp03-dev-bastion-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-bastion-sg",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf0e105dd268667"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group/sg-0716f387f1a8779e3",
            "description": "Allow SSH/HTTP from bastion SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all (yum/nginx updates)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0716f387f1a8779e3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP depuis le bastion",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098ce48df83d26fd6"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH depuis le bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098ce48df83d26fd6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tp03-dev-web-sg",
            "name_prefix": "",
            "owner_id": "039497794217",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tp03-dev-web-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-web-sg",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf0e105dd268667"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:subnet/subnet-022f9a28cbbb08825",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022f9a28cbbb08825",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039497794217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tp03-dev-private-eu-west-3a",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-private-eu-west-3a",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns",
              "Tier": "private"
            },
            "vpc_id": "vpc-08cf0e105dd268667"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:subnet/subnet-084afe5736f25d506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084afe5736f25d506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039497794217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tp03-dev-private-eu-west-3b",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-private-eu-west-3b",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns",
              "Tier": "private"
            },
            "vpc_id": "vpc-08cf0e105dd268667"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:subnet/subnet-0b97d03a9f84a9c19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b97d03a9f84a9c19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039497794217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tp03-dev-public-eu-west-3a",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-public-eu-west-3a",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns",
              "Tier": "public"
            },
            "vpc_id": "vpc-08cf0e105dd268667"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:subnet/subnet-09e10c8d23b38dff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e10c8d23b38dff3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039497794217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tp03-dev-public-eu-west-3b",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-public-eu-west-3b",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns",
              "Tier": "public"
            },
            "vpc_id": "vpc-08cf0e105dd268667"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:vpc/vpc-08cf0e105dd268667",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd7bcee752fc133c",
            "default_route_table_id": "rtb-08ad3a845ceff62cc",
            "default_security_group_id": "sg-09a6734940f3f49cf",
            "dhcp_options_id": "dopt-01f1c51c68cc28274",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08cf0e105dd268667",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ad3a845ceff62cc",
            "owner_id": "039497794217",
            "tags": {
              "Name": "tp03-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Name": "tp03-dev-vpc",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bastion_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group-rule/sgr-0b5109dc50abb6590",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Egress all",
            "from_port": -1,
            "id": "sgr-0b5109dc50abb6590",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-098ce48df83d26fd6",
            "security_group_rule_id": "sgr-0b5109dc50abb6590",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group-rule/sgr-07535f3d9dad09fe6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Egress all (yum/nginx updates)",
            "from_port": null,
            "id": "sgr-07535f3d9dad09fe6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0716f387f1a8779e3",
            "security_group_rule_id": "sgr-07535f3d9dad09fe6",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group-rule/sgr-0b49abfa37478169a",
            "cidr_ipv4": "92.153.5.8/32",
            "cidr_ipv6": null,
            "description": "SSH depuis IP autorisee",
            "from_port": 22,
            "id": "sgr-0b49abfa37478169a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-098ce48df83d26fd6",
            "security_group_rule_id": "sgr-0b49abfa37478169a",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group-rule/sgr-0ff0f275c5a430891",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTP depuis le bastion",
            "from_port": 80,
            "id": "sgr-0ff0f275c5a430891",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-098ce48df83d26fd6",
            "security_group_id": "sg-0716f387f1a8779e3",
            "security_group_rule_id": "sgr-0ff0f275c5a430891",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group-rule/sgr-0e980b9dd209ae25a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SSH depuis le bastion",
            "from_port": 22,
            "id": "sgr-0e980b9dd209ae25a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-098ce48df83d26fd6",
            "security_group_id": "sg-0716f387f1a8779e3",
            "security_group_rule_id": "sgr-0e980b9dd209ae25a",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Etudiant": "etudiant06",
              "ManagedBy": "isaie_dns",
              "Module": "tp02-vpc",
              "Owner": "etudiant06",
              "Project": "terraform_isaie_dns"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}